input search found

--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> GITHUB Profile </title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Github Profiles</title>
+    <link rel="stylesheet" href="./style.css" />
+    <script src="./main.js" defer></script>
 </head>
+
 <body>
-    
+    <form id="form" onsubmit="return formSubmit()">
+        <input type="text" id="search" autofocus placeholder="Search a Github User Here" />
+    </form>
+    <main id="main">
+        
+    </main>
 </body>
+
 </html>
